labatt/force-app/main/default/objects/Payload_Operation__c/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <label>auth url</label>
    <type>Url</type>
</CustomField>