labatt/force-app/main/default/objects/Payload_Operation__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>