labatt/force-app/main/default/objects/Payload_Operation__c/fields/redirect_url__c.field-meta.xml
<CustomField>
    <fullName>redirect_url__c</fullName>
    <label>redirect url</label>
    <type>Url</type>
</CustomField>